[metadata]
license = MIT
license_file = LICENSE
classifiers=
    Programming language :: Python :: 3.7
    Programming language :: Python :: 3.8
    Programming language :: Python :: 3.9
    Operating System :: OS Indepedent

[options]
install_requires =
    ensure == 1.0.2
    py-youtube == 1.1.7
python_requires = >=3.7

[options.extras_require]
testing = 
    pytest >= 7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1